Fixed Alignment Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,7 @@ img.show-mob { display: none; }
     justify-content: center;
     height: 40%;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .head-content .state-info-row .rest {
